--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#28a895</color>
+    <color name="colorPrimaryDark">#555555</color>
+    <color name="colorAccent">#28a895</color>
+    <color name="special">#28a895</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="grey">#888888</color>
+    <color name="hollow_grey">#AAAAAA</color>
+    <color name="light_grey">#EEEEEE</color>
+    <color name="green">#007700</color>
+    <color name="dark_red">#770000</color>
 </resources>
