--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -1,9 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.core.MessagesActivity">
+    tools:context=".activity.core.MessagesActivity"
+    android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/chat_bar"
+        android:id="@+id/toolbar"/>
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messagesRV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/seenTV"
+        android:layout_below="@+id/toolbar"
+        android:paddingBottom="5dp"
+        android:foregroundGravity="bottom"/>
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/seenTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last message seen"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/chatBottomLL"
+        android:textSize="12sp"/>
+
+    <RelativeLayout
+        android:id="@+id/chatBottomLL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:gravity="center_vertical"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:elevation="10dp">
+        <EditText
+            android:id="@+id/textET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingStart="10dp"
+            android:paddingBottom="10dp"
+            android:gravity="center_vertical"
+            android:paddingEnd="10dp"
+            android:textColor="@color/black"
+            android:hint="@string/aa"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/sendTextIV"
+            android:background="@drawable/light_grey_background_rounded_border"/>
+        <ImageView
+            android:id="@+id/sendTextIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_send_special"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"/>
+    </RelativeLayout>
+
+</RelativeLayout>
